# genfilter

./: LICENSE  README.md  pac  pyproject.toml
.github/workflows/: default.yml  main.yml  test-var.yml
genfilter/: __main__.py  convert.py  extractor.py  options.py
public/clash/: 18comic  36kr  54647  58tongcheng  abema  adguard  adobe  agilebits  akamai  alibaba  alibaba-ads  aliyun  alphabet  amap  amazon  anthropic  apple  apple-dev  apple-intelligence  apple-music  apple-pki  archive  asahi  atlassian  auxgroup  avmoo  avsforum  aws  azure  bahamut  baidu  baidu-ads  bbc  beats  bilibili  bilibili-cdn  binance  bing  bitwarden  bjyouth  (+376 more)
public/quantumult-x/: 0x0  115  1337x  17zuoye  18comic  2ch  2gis  2kgames  36kr  3dm  3type  4399  4chan  4paradigm  4plebs  51job  51nod  54647  58tongcheng  5ch  6park  75team  7tv  800best  8btc  928plus  9game  9news  9to5  aamgame  abc  abema  accuweather  acer  acfun  acfun-ads  acplay  actalis  adblock  adblockplus  (+1661 more)
src/genfilter/: __init__.py  convert.py  extractor.py  options.py
tests/: test_genfilter.py
