[tool.poetry]
name = "genfilter"
version = "0.1.0"
description = ""
authors = ["oriay <59334639+oriay@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
rich = "^9.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
genfilter = "genfilter.__main__:main"
