[project]
name = "genfilter"
version = "0.1.2"
description = "generate filter from domain-list-community"
readme = "README.md"
authors = [
    { name = "oriay", email = "59334639+oriay@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "requests>=2.34.2",
    "rich>=15.0.0",
]

[project.scripts]
genfilter = "genfilter:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
